<resources>
    <string name="mapbox_access_token">pk.eyJ1IjoidmFoaXRkdXJtdXMiLCJhIjoiY2s4YWhmaGdzMDI4bjNsb2E1cmI4eHZrYiJ9.xkT-AXyttvZkEqW0h4UOGA</string>
    <string name="app_name">Taxi in Trust</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_login">Geç</string>
    <string name="register">Kayıt Ol</string>
    <string name="login">Giriş</string>
    <string name="logout">Çıkış</string>
    <string name="name">İsim</string>
    <string name="surname">Soyad</string>
    <string name="age">Yaş</string>
    <string name="tel">Telefon</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>
